--- a/WeilRCT.bib
+++ b/WeilRCT.bib
@@ -806,3 +806,46 @@ Tests},
 	url = {http://dx.doi.org/10.1007/s00167-015-3941-9},
 	langid = {en}
 }
+
+@article{Schulz2010,
+	title = {CONSORT 2010 Statement: updated guidelines for reporting parallel group randomised trials},
+	author = {Schulz, K. F and Altman, D. G and Moher, D. and , },
+	year = {2010},
+	month = {03},
+	date = {2010-03-23},
+	journal = {BMJ},
+	pages = {c332--c332},
+	volume = {340},
+	number = {mar23 1},
+	doi = {10.1136/bmj.c332},
+	url = {http://dx.doi.org/10.1136/bmj.c332},
+	langid = {en}
+}
+
+@article{Hopewell2025,
+	title = {CONSORT 2025 statement: updated guideline for reporting randomised trials},
+	author = {Hopewell, Sally and Chan, An-Wen and Collins, Gary S and {Hróbjartsson}, {Asbjørn} and Moher, David and Schulz, Kenneth F and Tunn, Ruth and Aggarwal, Rakesh and Berkwits, Michael and Berlin, Jesse A and Bhandari, Nita and Butcher, Nancy J and Campbell, Marion K and Chidebe, Runcie C W and Elbourne, Diana and Farmer, Andrew and Fergusson, Dean A and Golub, Robert M and Goodman, Steven N and Hoffmann, Tammy C and Ioannidis, John P A and Kahan, Brennan C and Knowles, Rachel L and Lamb, Sarah E and Lewis, Steff and Loder, Elizabeth and Offringa, Martin and Ravaud, Philippe and Richards, Dawn P and Rockhold, Frank W and Schriger, David L and Siegfried, Nandi L and Staniszewska, Sophie and Taylor, Rod S and Thabane, Lehana and Torgerson, David and Vohra, Sunita and White, Ian R and Boutron, Isabelle},
+	year = {2025},
+	month = {04},
+	date = {2025-04-14},
+	journal = {BMJ},
+	pages = {e081123},
+	doi = {10.1136/bmj-2024-081123},
+	url = {http://dx.doi.org/10.1136/bmj-2024-081123},
+	langid = {en}
+}
+
+@article{henry2005,
+	title = {The short{-}form version of the Depression Anxiety Stress Scales (DASS{-}21): Construct validity and normative data in a large non{-}clinical sample},
+	author = {Henry, Julie D. and Crawford, John R.},
+	year = {2005},
+	month = {06},
+	date = {2005-06},
+	journal = {British Journal of Clinical Psychology},
+	pages = {227--239},
+	volume = {44},
+	number = {2},
+	doi = {10.1348/014466505x29657},
+	url = {http://dx.doi.org/10.1348/014466505X29657},
+	langid = {en}
+}
